# smowl-analyser

./: .gitignore  README.md  pyproject.toml  requirements.txt
smowl_analyser/: __init__.py  analysis.py  browser.py  cli.py  config.py  diagnostics.py  learning.py  models.py  storage.py
smowl_analyser/extractors/: __init__.py  blackboard.py  html.py  smow.py
tests/: test_analysis.py  test_cli_navigation.py  test_diagnostics.py  test_extractors.py  test_learning.py  test_models.py  test_storage.py
tests/fixtures/: activity_without_report.html  blackboard_course_cards.html  blackboard_course_list.html  blackboard_main_nav.html  course_with_smow_activity.html  learning_page.html  smow_report.html  student_detail.html  student_without_files.html
